smartemission/services/gost/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: gost-deployment
  namespace: smartemission
  labels:
    app: gost
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gost
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: gost
    spec:
      containers:
      - name: gost
        image: smartemission/se-gost:1.0.0
        livenessProbe:
          httpGet:
            path: /v1.0/Sensors
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /v1.0/Sensors
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "200m"
            memory: "150M"
          requests:
            cpu: "200m"
            memory: "150M"
        ports:
        - containerPort: 8080
