smartemission/services/gost/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gost-service
  namespace: smartemission
  labels:
    app: gost
spec:
  ports:
  - port: 8080
  selector:
    app: gost
